# SciStagEssentialData

./: .gitignore  README.md  pyproject.toml
data/emoji/: emoji_db.json  emoji_names.json  markdown_emoji_names.json
fonts/MaterialDesign/: material_design_icon_names.json
images/noto/: README.md
scripts/build_emoji_names/: build_emoji_names.py  convert_names.py
scripts/build_hd_emojis/: build_hd_emojis.py  package_hd_emojis.py
scripts/build_test_archive/: build_test_archive.py
scripts/create_bundles/: create_essentials.py
scripts/image_archive_extractor/: archex.py
scripts/webfont_icon_name_list/: create_list.py
test_data/: LICENSE.md
