[tool.poetry]
name = "SciStagEssentialData"
version = "0.0.1"
description = ""
authors = ["Michael Ikemann"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
scistag = "0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
